// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WholesalePrice /> should render with props 1`] = `
<WholesalePrice
  description="<b>lorem</b>"
  price={222222}
  text="Крупный опт «Галантерея и швейная галантерея»"
>
  <div
    className=""
  >
    <div
      className="wrapper"
    >
      <ForwardRef(Text)
        color="gray38"
        lineHeight={16}
        size={12}
        weight={600}
      >
        <span
          className="size-12 line-height-16 color__gray38 weight-600"
        >
          <Price
            currencyGraphemeClass="currency-grapheme"
            value={222222}
          >
            <span
              className="root"
            >
              222 222
            </span>
          </Price>
           / 
          <span
            className="wholesale-word"
          >
            Опт 
          </span>
          <WholesaleText
            className="wholesale-text"
            text="Крупный опт «Галантерея и швейная галантерея»"
          >
            <span
              className="wholesale-text"
            >
              Крупный опт «Галантерея и швейная галантерея»
            </span>
          </WholesaleText>
        </span>
      </ForwardRef(Text)>
    </div>
    <div
      className="icon-wrapper"
    >
      <span
        aria-label="Подробнее"
        className="icon"
        onClick={[Function]}
        role="button"
      >
        <InformationSVG
          className="svg"
          role="presentation"
        >
          <svg
            className="svg"
            height={16}
            role="presentation"
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M8 7a1 1 0 011 1v3a1 1 0 11-2 0V8a1 1 0 011-1zM8 6a1 1 0 100-2 1 1 0 000 2z"
            />
            <path
              clipRule="evenodd"
              d="M0 8a8 8 0 1116 0A8 8 0 010 8zm8-6a6 6 0 100 12A6 6 0 008 2z"
              fillRule="evenodd"
            />
          </svg>
        </InformationSVG>
      </span>
    </div>
  </div>
</WholesalePrice>
`;

exports[`<WholesalePrice /> should render without props 1`] = `
<WholesalePrice>
  <div
    className=""
  >
    <div
      className="wrapper"
    >
      <ForwardRef(Text)
        color="gray38"
        lineHeight={16}
        size={12}
        weight={600}
      >
        <span
          className="size-12 line-height-16 color__gray38 weight-600"
        >
          <Price
            currencyGraphemeClass="currency-grapheme"
          >
            <span
              className="root"
            />
          </Price>
           / 
          <span
            className="wholesale-word"
          >
            Опт 
          </span>
        </span>
      </ForwardRef(Text)>
    </div>
  </div>
</WholesalePrice>
`;
